--- a/WordZ/builds/index_wordz_chatty_userlist_fixed.html
+++ b/WordZ/builds/index_wordz_chatty_userlist_fixed.html
@@ -1197,8 +1197,11 @@
     "^7“Desks clear. Notes aligned. Pages ready.”",
     "^7“Information is enough.”",
     "^7“Shell first. Reality later.”",
+    "^7“Angles: business. Soul: punk.”",
     "^7“Be kind to the log; it remembers.”",
-    "^7“Angles: business. Soul: punk.”"
+    "^7“Local-first. Noise-last.”",
+    "^7“Milk-cream UI, razor edges.”",
+    "^7“Quiet systems still move.”"
   ];
 
 
@@ -1214,12 +1217,9 @@
 
     ul.innerHTML = "";
 
-    const roster = (typeof NPC_ROSTER !== "undefined" && Array.isArray(NPC_ROSTER)) ? NPC_ROSTER : [];
-
-    // self (identity) blended into list (always shown)
+    // self (identity) blended into list (top)
     const selfName = (window.WORDZ_USER_NAME || "You");
     const selfColor = (window.WORDZ_USER_COLOR || "#2a2a2a");
-
     const liSelf = document.createElement("li");
     liSelf.className = "userRow";
     const dotSelf = document.createElement("span");
@@ -1232,7 +1232,7 @@
     liSelf.appendChild(nameSelf);
     ul.appendChild(liSelf);
 
-    for (const npc of roster){
+    for (const npc of NPC_ROSTER){
       const li = document.createElement("li");
       li.className = "userRow";
 
@@ -1249,7 +1249,7 @@
       ul.appendChild(li);
     }
 
-    pill.textContent = String(roster.length + 1);
+    pill.textContent = String(NPC_ROSTER.length + 1);
   }
 
     pill.textContent = String(NPC_ROSTER.length);
@@ -1290,7 +1290,7 @@
     if (lineCount < 2) return;
 
     // Quiet by default
-    if (!chance(0.60)) return;
+    if (!chance(0.55)) return;
 
     // Pick speaker (sometimes respond to lastNpc)
     let npc = null;
@@ -1303,9 +1303,11 @@
 
     // Pick topic (sometimes mirror last topic)
     const topic = chance(0.45) ? lastTopic : randomTopicFor(npc);
-    const line = pick(TOPIC_LINES[topic] || TOPIC_LINES.ops);
+    let line = pick(TOPIC_LINES[topic] || TOPIC_LINES.ops);
 
-    const replyPrefix = (lastNpc && chance(0.22)) ? `^7@${lastNpc}: ` : "";
+    // occasional quote drop
+    if (chance(0.22)) line = pick(QUOTES);
+const replyPrefix = (lastNpc && chance(0.22)) ? `^7@${lastNpc}: ` : "";
     const chan = (topic === "ops" || topic === "relay" || topic === "status") ? "SYS"
               : (topic === "clan") ? "CLAN" : "ROOM";
 
@@ -1386,6 +1388,10 @@
 
     const gh = document.getElementById("identGlowHint");
     if (gh) gh.textContent = "glow: " + String(window.WORDZ_USER_GLOW || 10);
+
+    // keep user list synced
+    try{ renderUserList(); }catch(e){}
+
   }
 
   function saveIdentity(){
@@ -1786,7 +1792,7 @@
   // ===== NPC panel + ambient chatter =====
   renderUserList();
   setInterval(npcPresenceTick, 12000 + Math.floor(Math.random()*6000));
-  setInterval(npcChatterTick, 9000 + Math.floor(Math.random()*7000));
+  setInterval(npcChatterTick, 5500 + Math.floor(Math.random()*5000));
 
   input.focus();
 })();
