--- a/wordz.html
+++ b/wordz.html
@@ -1159,52 +1159,47 @@
     { name: "RoomTemp",    color: "#ffff40", state: "idle",   topics: ["vibe","quiet","timing"] },
     { name: "NullPointer", color: "#ff40ff", state: "online", topics: ["bugs","edges","inputs"] },
     { name: "Archivist",   color: "#aaaaaa", state: "online", topics: ["notes","logs","memory"] },
-
+  
     { name: "NeonLobby",   color: "#00ffff", state: "online", topics: ["room","vibe","timing"] },
     { name: "RazorWire",   color: "#ff9900", state: "online", topics: ["edges","bugs","inputs"] },
     { name: "MilkCarton",  color: "#c060ff", state: "idle",   topics: ["vibe","notes","memory"] },
     { name: "SysClock",    color: "#40ffff", state: "online", topics: ["status","timing","ops"] },
     { name: "ForumBio",    color: "#00ccff", state: "online", topics: ["portal","links","ui"] },
     { name: "BevelBoss",   color: "#ffcc40", state: "idle",   topics: ["ui","edges","notes"] },
-
-    // Golders (reserved slots for future NPC expansion)
-    // { name: "Golder_01", color: "#??????", state: "idle", topics: ["ops"] },
-    // { name: "Golder_02", color: "#??????", state: "idle", topics: ["clan"] },
   ];
 
   const NPC_CHANNELS = ["ROOM","CLAN","SYS"];
 
   // "Gun topics" here = game/chat flavor only (matches/loadouts vibes), no real-world instructions.
   const TOPIC_LINES = {
-    ops: ["^2ping ok.","^7relay quiet.","^3instance idle.","^7signals stable.", "^7diag: green.", "^7uptime: imaginary.", "^2handshake clean."],
+    ops: ["^2ping ok.","^7relay quiet.","^3instance idle.","^7signals stable."],
     relay: ["^7bus: clear.","^7packets: calm.","^5handoff clean."],
     status: ["^2online.","^7idle.","^4watching."],
-    clan: ["^7[CLAN, "^7[CLAN] someone emoted.", "^7[CLAN] bio link posted.", "^7[CLAN] “gg” typed, then deleted."] chatter drifting.","^7someone joined the room.","^7someone left a note."],
-    room: ["^7room feels light today.","^7matchmaking: imaginary.", "^7room: liminal.", "^7spectators: 0.", "^7chat scrolls like rain."],
+    clan: ["^7[CLAN] chatter drifting.","^7someone joined the room.","^7someone left a note."],
+    room: ["^7room feels light today.","^7matchmaking: imaginary."],
     matches: ["^3warmup only.","^7no ranked. just motion."],
     patch: ["^7notes are incomplete.","^7build feels stable."],
     version: ["^7v0.0.x energy.","^7shell-first, always."],
-    notes: ["^7log appended.","^7archived locally.", "^7footnote added.", "^7bookmark placed.", "^7margin scribble saved."],
+    notes: ["^7log appended.","^7archived locally."],
     portal: ["^3blue link looks real.","^7click-through confirmed."],
     links: ["^3external jump armed.","^7confirm modal: expected."],
-    ui: ["^7bevels: correct.","^7angles: business.", "^7titlebar: crisp.", "^7bevel check: passed.", "^7pixels: aligned."],
+    ui: ["^7bevels: correct.","^7angles: business."],
     vibe: ["^7quiet window.","^7milk-cream palette."],
     timing: ["^7slow loop. steady hand.","^7no rush."],
-    bugs: ["^6edge case spotted.","^6input sanitized.", "^6null dreams in hex.", "^6it works until it doesn’t.", "^6repro steps: vague."],
+    bugs: ["^6edge case spotted.","^6input sanitized."],
     edges: ["^6corners squared.","^6borders held."],
     inputs: ["^6user typed.","^6shell replied."],
     logs: ["^7remember this frame.","^7the log holds."],
     memory: ["^7localStorage: faithful.","^7state preserved."],
   };
 
-
   const QUOTES = [
     "^7“Desks clear. Notes aligned. Pages ready.”",
     "^7“Information is enough.”",
     "^7“Shell first. Reality later.”",
     "^7“Angles: business. Soul: punk.”",
-    "^7“Local-only doesn’t mean small.”",
     "^7“Be kind to the log; it remembers.”",
+    "^7“Local-first. Noise-last.”",
     "^7“Milk-cream UI, razor edges.”",
     "^7“Quiet systems still move.”"
   ];
@@ -1222,23 +1217,22 @@
 
     ul.innerHTML = "";
 
-    // self (identity) blended into list
+    // self (identity) blended into list (top)
     const selfName = (window.WORDZ_USER_NAME || "You");
     const selfColor = (window.WORDZ_USER_COLOR || "#2a2a2a");
-    if (selfName && selfName !== "You"){
-      const liSelf = document.createElement("li");
-      liSelf.className = "userRow";
-      const dotSelf = document.createElement("span");
-      dotSelf.className = "uDot";
-      const nameSelf = document.createElement("span");
-      nameSelf.className = "uName whoGlow";
-      nameSelf.textContent = selfName;
-      nameSelf.style.color = selfColor;
-      liSelf.appendChild(dotSelf);
-      liSelf.appendChild(nameSelf);
-      ul.appendChild(liSelf);
-    }
-for (const npc of NPC_ROSTER){
+    const liSelf = document.createElement("li");
+    liSelf.className = "userRow";
+    const dotSelf = document.createElement("span");
+    dotSelf.className = "uDot";
+    const nameSelf = document.createElement("span");
+    nameSelf.className = "uName whoGlow";
+    nameSelf.textContent = selfName;
+    nameSelf.style.color = selfColor;
+    liSelf.appendChild(dotSelf);
+    liSelf.appendChild(nameSelf);
+    ul.appendChild(liSelf);
+
+    for (const npc of NPC_ROSTER){
       const li = document.createElement("li");
       li.className = "userRow";
 
@@ -1254,6 +1248,9 @@ for (const npc of NPC_ROSTER){
       li.appendChild(name);
       ul.appendChild(li);
     }
+
+    pill.textContent = String(NPC_ROSTER.length + 1);
+  }
 
     pill.textContent = String(NPC_ROSTER.length);
   }
@@ -1293,7 +1290,7 @@ for (const npc of NPC_ROSTER){
     if (lineCount < 2) return;
 
     // Quiet by default
-    if (!chance(0.45)) return;
+    if (!chance(0.55)) return;
 
     // Pick speaker (sometimes respond to lastNpc)
     let npc = null;
@@ -1309,7 +1306,7 @@ for (const npc of NPC_ROSTER){
     let line = pick(TOPIC_LINES[topic] || TOPIC_LINES.ops);
 
     // occasional quote drop
-    if (chance(0.18)) line = pick(QUOTES);
+    if (chance(0.22)) line = pick(QUOTES);
 const replyPrefix = (lastNpc && chance(0.22)) ? `^7@${lastNpc}: ` : "";
     const chan = (topic === "ops" || topic === "relay" || topic === "status") ? "SYS"
               : (topic === "clan") ? "CLAN" : "ROOM";
@@ -1392,10 +1389,10 @@ const replyPrefix = (lastNpc && chance(0.22)) ? `^7@${lastNpc}: ` : "";
     const gh = document.getElementById("identGlowHint");
     if (gh) gh.textContent = "glow: " + String(window.WORDZ_USER_GLOW || 10);
 
-    // keep user list in sync with identity
+    // keep user list synced
     try{ renderUserList(); }catch(e){}
-  }
 
+  }
 
   function saveIdentity(){
     try{ localStorage.setItem(IDENT_KEY, JSON.stringify(IDENTITY)); }catch(e){}
@@ -1795,7 +1792,7 @@ const replyPrefix = (lastNpc && chance(0.22)) ? `^7@${lastNpc}: ` : "";
   // ===== NPC panel + ambient chatter =====
   renderUserList();
   setInterval(npcPresenceTick, 12000 + Math.floor(Math.random()*6000));
-  setInterval(npcChatterTick, 9000 + Math.floor(Math.random()*7000));
+  setInterval(npcChatterTick, 5500 + Math.floor(Math.random()*5000));
 
   input.focus();
 })();
